css: Fix problem with too long stream error formatting.
Add overflow-wrap rule for #response span to subscriptions.css.

--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -36,6 +36,10 @@
     padding-left: 15px;
 }
 
+.subscriptions div #response {
+    overflow-wrap: break-word;
+}
+
 #subscriptions_table .subscription_block {
     padding-left: 0.5em;
     vertical-align: middle;
